# race-rewind

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE.md  README.md  architecture.md  astro.config.mjs  drizzle.config.ts  eslint.config.mjs  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vercel.json
.github/workflows/: docker.yml
drizzle/: 0000_right_catseye.sql  0001_fluffy_paladin.sql  0002_broad_dazzler.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
ingest/: build_db.ts  build_static_data.ts  csv.ts  slugs.ts  state.ts
ingest/tests/: derived.test.ts  driver-season-overview.test.ts  eras.test.ts  helpers.ts  invariants.test.ts  team-driver-heroes.test.ts  team-season-overview.test.ts
ingest/transform/: derived.ts  dimensions.ts  entries.ts  results.ts  standings.ts  timeline.ts
ingestion/: build_db.py  schema.sql
ingestion/tests/: test_invariants.py  test_races.py
ingestion/transform/: __init__.py  dimensions.py  entries.py  results.py  slugs.py  standings.py  timeline.py  util.py
public/: _headers  robots.txt
src/: content.config.ts
src/components/: AllDriversTable.astro  ContinueButton.svelte  DriverStandingsTable.astro  RaceNav.astro  SeasonGridTable.astro  SeasonSidebar.astro  TeamStandingsTable.astro
src/db/: client.ts  relations.ts  schema.ts
src/layouts/: Base.astro  BaseV2.astro  RaceSessionLayout.astro  StaticEntityBase.astro
src/lib/: api-types.ts  const.ts  db.ts  format.test.ts  format.ts  nav.ts  page-nav.test.ts  page-nav.ts  queries.ts  (+11 more)
(+1349 files in other folders)
