[project]
name = "f1-history-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
# Not a library — don't try to build/install this as a package
package = false

[tool.pytest.ini_options]
testpaths = ["ingestion/tests"]
